update to test mp3 file player

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>GEB</head>
 <body>
     <h2>Hello, World</h2>
+    <p></p>
+    <p>
+        <objectwidth="300"height="50">
+        <paramname="src"value="LINKHERE">
+        <paramname="autoplay"value="false">
+        <paramname="controller"value="true">
+        <paramname="bgcolor"value="#FFFFFF">
+        <embedsrc="LINKHERE"autostart="false"loop="false"width="300"height="50"controller="true"bgcolor="#FFFFFF">
+        </object>
+    </p>
 </body>
 
 <html>
