--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <body>
     <h2>Hello, World</h2>
     <p></p>
+    <h3><b><i>Three-Part Invention</i></b></h3>
+    <p>Bach wrote fifteen three-part inventions. In this three-part Dialogue, the Tortoise and Achilles -the main fictional progtagonists in the Dialogues- are "invented" by Zeno (as in fact they were, to illustrate Zeno's paradoxes of motion). Very short, it simply gives the flavor of the Dialogues to come.</p>
+    <p></p>
+    <p><i>Achilles (a Greek warrior, the fleetest of foot of all mortals) and a Tortoise are standing together on a dusty runway in the hot sun. Far down the runway, on a tall flagpole, there hangs a large rectangular flag. The flag is solid red, except where a thin ring-shaped hole has been cut out of it, through which one can see the sky.</i></p>
+    <p></p>
+    <p>Audio for the Three-Part Invention</p>
     <p>
-        <objectwidth="300"height="50">
-        <paramname="src"value="LINKHERE">
-        <paramname="autoplay"value="false">
-        <paramname="controller"value="true">
-        <paramname="bgcolor"value="#FFFFFF">
-        <embedsrc="LINKHERE"autostart="false"loop="false"width="300"height="50"controller="true"bgcolor="#FFFFFF">
-        </object>
+        <audio autoplay="autoplay" controls="controls">  
+                <source src="3partInvention_take1_5_21_19.mp3" />  
+                <source src="3partInvention_take1_5_21_19.mp3" />  
+        </audio> 
+        
     </p>
 </body>
 
